# safedrop

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: deploy.yml
crates/crypto-core/: Cargo.toml
crates/crypto-core/src/: chunks.rs  cipher.rs  kdf.rs  keys.rs  lib.rs  utils.rs
crates/crypto-core/tests/: chunks_test.rs  cipher_test.rs  e2e_crypto_test.rs  keys_test.rs  wasm_browser_tests.rs
signaling/: wrangler.toml
signaling/src/: index.ts
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: connection.ts  crypto.ts  main.ts  signaling.ts  styles.css  transfer.ts  ui.ts  webrtc.ts
